--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -12,6 +12,10 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  padding: 8px;
+  /*gap: 16px;*/
+  justify-content: space-between;
 }
 
 .profile-image {
@@ -45,4 +49,17 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
+  /*justify-content: space-between;*/
+  gap: 20px;
+  /*margin-right: auto;*/
+  margin: 0;
+  padding: 0;
+}
+
+/*.left,*/ .right {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+  
 }
