--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -24,3 +24,25 @@ img {
   justify-content: center;
   background: #eee;
 }
+
+.plant {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.plant-container {
+  display: flex;
+  justify-content: space-evenly;
+  /*align-items: center;*/
+  gap: 52px;
+}
+
+.title {
+  margin-bottom: 32px;
+}
+
+body {
+  text-align: center;
+}
