--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -2,27 +2,78 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 .header {
   height: 72px;
   background: darkmagenta;
   color: white;
+  font-size: 32px;
+  font-weight: 900px;
+  border: 3px solid white;
+  display: flex;
+  align-items: center;
+  padding: 0 16px;
 }
 
 .footer {
   height: 72px;
   background: #eee;
   color: darkmagenta;
+  margin-top: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .sidebar {
   width: 300px;
+  /*min-width: 300px;  use flex shrink instead*/
+  flex-shrink: 0;
   background: royalblue;
+  padding: 16px;
 }
 
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  padding: 16px;
+  margin: 16px;
+  width: 300px;
+ 
+}
+
+.card-container {
+  display: flex;
+  border: 3px solid black;
+  gap: 16px;
+  flex-wrap: wrap;
+  padding: 32px;
+  justify-content: space-between;
+}
+
+.content {
+  display: flex;
+  border: 3px solid black;
+  flex: 1;
+}
+
+li a {
+  text-decoration: none;
+  color: white;
+  font-size: 24px;
+  margin-bottom: 16px;
+}
+
+li {
+  margin-bottom: 16px;
+}
+
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
